@@ -283,8 +283,8 @@ error("incorrect type in rnfeltabstorel, apply nfinit(rnf) (t_COL).")
 error("incorrect type in rnfalgtobasis [not in Q[X]] (t_POL).")
 error("incorrect type in rnfbasistoalg [not in Q[X]] (t_POL).")
 error("incorrect type in rnfeltabstorel [not in Q[X]] (t_POL).")
-error("incorrect type in Q_denom (t_COMPLEX).")
-error("incorrect type in Q_denom (t_COMPLEX).")
+error("incorrect type in poltobasis (t_POL).")
+error("incorrect type in poltobasis (t_POL).")
 error("incorrect type in rnfeltdown [not in Q[X]] (t_POL).")
 error("incorrect type in rnfeltabstorel [not in Q[X]] (t_POL).")
 error("incorrect type in rnfeltabstorel [not in Q[X]] (t_POL).")
@@ -694,7 +694,7 @@ error("incorrect type in rnfbasistoalg [not in Q[X]] (t_POL).")
 error("incorrect type in rnfbasistoalg [not in Q[X]] (t_POL).")
 error("incorrect type in rnfidealabstorel (t_POL).")
 error("incorrect type in rnfbasistoalg [not in Q[X]] (t_POL).")
-error("incorrect type in Q_denom (t_COMPLEX).")
+error("incorrect type in poltobasis (t_POL).")
 error("incorrect type in rnfbasistoalg [not in Q[X]] (t_POL).")
 error("incorrect type in rnfbasistoalg [not in Q[X]] (t_POL).")
 error("incorrect type in rnfbasistoalg [not in Q[X]] (t_POL).")
@@ -846,4 +846,4 @@ error("inconsistent dimensions in idealtwoelt.")
   ***   at top-level: rnfislocalcyclo(rnfinit(K,x^6-y+1))
   ***                 ^-----------------------------------
   *** rnfislocalcyclo: sorry, rnfislocalcyclo for non-l-extensions is not yet implemented.
-Total time spent: 731
+Total time spent: 448
